# next-intl

./: .gitignore  .prettierrc.json  AGENTS.md  CHANGELOG.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md  lerna.json  missing.md  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  03_update_docs.yml  bug_report.md  bug_report.yml  config.yml  feature_request.yml  update_docs.yml
.github/workflows/: close-stale.yml  issue-commenter.yml  lint-pr.yml  main.yml  prerelease-canary.yml  prerelease-v4.yml  prerelease.yml  publish.yml  release-recover.yml  release.yml  test-next-intl.yml  type-perf.yml
docs/: .eslintrc.js  .gitignore  CHANGELOG.md  README.md  config.js  eslint.config.mjs  extractor-incremental-research.md  extractor-race-condition-analysis.md  faq.md  global.d.ts  installation.md  lintLinks.mjs  next-sitemap.config.js  next.config.js  next.config.mjs  package.json  prettier.config.js  styles.css  tailwind.config.js  theme.config.js  theme.config.tsx  tree-shaking-provider-constraint.md  tsconfig.json  usage.md
docs/components/: AlgoliaSearch.css  AlgoliaSearch.tsx  Analytics.tsx  BlogPostLink.tsx  Button.tsx  Callout.tsx  Pre.tsx  (+25 more)
examples/example-app-router-extracted/transform-plugin/: Cargo.toml  package.json
examples/example-app-router-extracted/transform-plugin/src/: lib.rs  lib_test.rs
media/: logo.sketch
patches/: next@13.4.0.patch  nextra-theme-docs.patch
playground/: .gitignore  README.md  next.config.ts  package.json  playwright.config.ts
rfcs/: 001-message-extraction.md  002-icu-message-precompilation.md  003-tree-shaking.md
scripts/: TsupPluginAddRelativeEsmExtensions.js  getBuildConfig.js  getBuildConfig.mjs  getBuildConfig.ts  prepare.sh  publish.js
src/: NextIntlMessages.tsx  TranslationValues.tsx  index.tsx  useIntl.tsx  useIntlContext.tsx  useLocale.tsx  useTranslations.tsx
test/: useIntl.test.tsx  useTranslations.test.tsx
tools/: eslint.config.mjs  package.json
type-export-test/: README.md  package.json  tsconfig.json
(+1212 files in other folders)
